# Wasmedgeup

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
wasmedgeup/: Cargo.toml
wasmedgeup/src/: cli.rs  downloader.rs  installer.rs  main.rs  platform.rs  plugin.rs
