[package]
name = "wasmedgeup"
version = "0.1.0"
edition = "2021"
authors = ["Temiloluwa Yusuf"]
description = "A cross-platform installer for WasmEdge runtime and plugins"
license = "Apache-2.0"

[[bin]]
name = "wasmedgeup"
path = "wasmedgeup/src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
sys-info = "0.9"
semver = "1.0"
tempfile = "3.10"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
url = "2.5"
